# pdf2markdown

./: .gcloudignore  .gitignore  Makefile  README.md  app.py  app.yaml  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
documentation/: ARCHITECTURE.md  CONVERTERS.md  GRADIO.md  STYLING.md  TESTING.md
src/pdf2markdown/: app.py  converters.py  job_store.py  log_setup.py  pdf_pipeline.py  utils.py  web_app.py
src/pdf2markdown/static/: style.css
src/pdf2markdown/templates/: _result.html  index.html
templates/: index.html
tests/: test_app.py  test_converters.py  test_job_store.py  test_log_setup.py  test_pdf_pipeline.py  test_utils.py  test_web_app.py
