# PyTorch CUDA 13.0 wheels are not on PyPI.
# explicit = true means uv only queries this index for packages listed in
# [tool.uv.sources], preventing stale requests/certifi versions from
# the PyTorch index from polluting the rest of the resolution.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

# =========================================================
# Project metadata
# =========================================================

[project]
name = "pdf2markdown"
version = "0.1.0"
description = "User can transform pdf into md choosing between various parsers."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Martin", email = "martin.diergardt.2@gmail.com"}
]
keywords = ["pdf", "parser", "markdown"]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
]

# Core dependencies for case study
dependencies = [
    "docling>=2.0",
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.17",
    "marker-pdf>=1.0",
    "llama-cloud>=1.0",
    "python-dotenv>=1.0",
    "easyocr>=1.7",
    "torch>=2.9.0,<2.11",
    "torchvision>=0.24.0,<0.26",
    # Web stack
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
]

# =========================================================
# Optional dependencies
# =========================================================

[project.optional-dependencies]
dev = [
  "bpython",
  "pytest>=8.0",
  "pytest-env",
  "ruff>=0.6",
  "memory-profiler",
  "mypy>=1.8",
  "ipykernel>=6.29",
  "types-requests",
]

# =========================================================
# Package discovery (src layout)
# =========================================================

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdf2markdown*"]

# =========================================================
# Ruff (linting)
# =========================================================

[tool.ruff]
fix = false
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings 
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions (cleaner list/dict/set expressions)
  "SIM", # flake8-simplify
  "PTH", # use pathlib over os.path
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["I001"]

# =========================================================
# PyTest
# =========================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["tests/*"]

# =========================================================
# Mypy (static typing)
# =========================================================

[tool.mypy]
mypy_path = ["src"]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true                 
disallow_any_generics = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "marker.*",
    "pymupdf",
    "pymupdf4llm",
    "llama_cloud.*",
    "dotenv",
]
ignore_missing_imports = true
